HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestUnknownCoverageReference/Expected.uv
//! Expected diagnostic metadata for the TestUnknownCoverageReference rejected-source specimen.

expectedDiagnostic("E-TST-0107", "diagnostics.TestAttributes")
expectedDiagnostic("E-TST-0107", "def.TestAttributeArgsOk")
